--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "asgardcms/platform",
+    "name": "darekmeco/platform",
     "description": "The AsgardCms application.",
     "keywords": [
         "cms",
